force-app/main/default/objects/Conditions__c/Conditions__c.object-meta.xml
<CustomObject>
    <label>Conditions</label>
    <nameField>
        <label>Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>