force-app/main/default/objects/Conditions__c/fields/Budget_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Line Item</label>
    <referenceTo>LLC_BI__Budget_Line_Item__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>