force-app/main/default/objects/Conditions__c/fields/Budget_Name__c.field-meta.xml
<CustomField>
    <fullName>Budget_Name__c</fullName>
    <formula>Loan__r.LLC_BI__Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Name</label>
    <type>Text</type>
</CustomField>