force-app/main/default/objects/Conditions__c/fields/xyz__c.field-meta.xml
<CustomField>
    <fullName>xyz__c</fullName>
    <formula>Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xyz</label>
    <type>Text</type>
</CustomField>